# fleXRP

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  app.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  wallet_setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: README.md  build-and-publish.yml  deploy.yml  discord-push-notifications.yml  terraform.yml  test.yml
docker/: Dockerfile
docs/: BUSINESS_CASE.md  CHALLENGES.md  FRAMEWORK_SELECTION.md  PHASE_2.md  PHASE_3.md  PHASE_4.md
docs/PHASE_1/: PHASE_1 _DETAIL.md  PHASE_1_OVERVIEW.md  README.md  app.py  wallet_setup.py
docs/PHASE_2/: README.md  app.py  monitor_payments.py
docs/PHASE_2.5/: README.md
docs/PHASE_2.5/terraform/: README.md
docs/PHASE_2.5/terraform/backend/: main.tf
docs/PHASE_3/: README.md
docs/PHASE_4/: README.md
infrastruture/terraform/: README.md
infrastruture/terraform/environments/prod/: main.tf
infrastruture/terraform/modules/database/: main.tf
src/: app.py
src/api/: __init__.py
src/api/routes/: auth.py  dashboard.py  payments.py  settings.py
src/api/static/css/: styles.css
src/api/static/js/: app.js  dashboard.js  payments.js  settings.js
src/api/templates/: base.html
src/core/: error_handlers.py  exceptions.py  metrics.py  monitoring.py
src/services/: payment_monitor.py  rate_service.py  wallet_service.py
tests/: conftest.py  test_basic.py
tests/api/: test_routes.py
tests/core/: test_core.py.bak
tests/services/: test_services.py  test_xrpl_service.py
(+13 files in other folders)
