[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flexrp"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "A flexible XRP payment processing system"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]